examples/rhdh-must-gather.output.rosa-ocp/ghcr-io-rm3l-rhdh-must-gather-sha256-03c44f0651254097feed88b0dba951d29cbc55ab25b3bc49b580a5846cef99a5/namespace-inspect/namespaces/my-ns/route.openshift.io/routes.yaml
---
apiVersion: route.openshift.io/v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2025-10-23T11:12:30Z"
    labels:
      app.kubernetes.io/instance: my-developer-hub-op
      app.kubernetes.io/name: backstage
    managedFields:
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:labels:
            f:app.kubernetes.io/instance: {}
            f:app.kubernetes.io/name: {}
          f:ownerReferences:
            k:{"uid":"61803723-6184-4c65-8836-9c7513554702"}: {}
        f:spec:
          f:path: {}
          f:port:
            f:targetPort: {}
          f:tls:
            f:insecureEdgeTerminationPolicy: {}
            f:termination: {}
          f:to:
            f:kind: {}
            f:name: {}
            f:weight: {}
        f:status: {}
      manager: backstage-controller
      operation: Apply
      time: "2025-10-23T11:12:30Z"
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:ingress: {}
      manager: openshift-router
      operation: Update
      subresource: status
      time: "2025-10-23T11:12:30Z"
    name: backstage-my-developer-hub-op
    namespace: my-ns
    ownerReferences:
    - apiVersion: rhdh.redhat.com/v1alpha3
      blockOwnerDeletion: true
      controller: true
      kind: Backstage
      name: my-developer-hub-op
      uid: 61803723-6184-4c65-8836-9c7513554702
    resourceVersion: "40491"
    uid: 2f08882f-5876-4984-98cf-f3b81055656c
  spec:
    host: backstage-my-developer-hub-op-my-ns.apps.rosa.pdgba-acqm3-3em.42wz.p3.openshiftapps.com
    path: /
    port:
      targetPort: http-backend
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: edge
    to:
      kind: Service
      name: backstage-my-developer-hub-op
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2025-10-23T11:12:30Z"
        status: "True"
        type: Admitted
      host: backstage-my-developer-hub-op-my-ns.apps.rosa.pdgba-acqm3-3em.42wz.p3.openshiftapps.com
      routerCanonicalHostname: router-default.apps.rosa.pdgba-acqm3-3em.42wz.p3.openshiftapps.com
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      meta.helm.sh/release-name: redhat-developer-hub-helm
      meta.helm.sh/release-namespace: my-ns
    creationTimestamp: "2025-10-23T11:11:18Z"
    labels:
      app.kubernetes.io/component: backstage
      app.kubernetes.io/instance: redhat-developer-hub-helm
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: developer-hub
      app.kubernetes.io/version: 1.7.1
      helm.sh/chart: redhat-developer-hub-1.7.1
    managedFields:
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:meta.helm.sh/release-name: {}
            f:meta.helm.sh/release-namespace: {}
          f:labels:
            .: {}
            f:app.kubernetes.io/component: {}
            f:app.kubernetes.io/instance: {}
            f:app.kubernetes.io/managed-by: {}
            f:app.kubernetes.io/name: {}
            f:app.kubernetes.io/version: {}
            f:helm.sh/chart: {}
        f:spec:
          f:host: {}
          f:path: {}
          f:port:
            .: {}
            f:targetPort: {}
          f:tls:
            .: {}
            f:insecureEdgeTerminationPolicy: {}
            f:termination: {}
          f:to:
            f:kind: {}
            f:name: {}
            f:weight: {}
          f:wildcardPolicy: {}
      manager: bridge
      operation: Update
      time: "2025-10-23T11:11:18Z"
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:ingress: {}
      manager: openshift-router
      operation: Update
      subresource: status
      time: "2025-10-23T11:11:18Z"
    name: redhat-developer-hub-helm
    namespace: my-ns
    resourceVersion: "40242"
    uid: 2faa84ec-98fe-461b-8ea1-4bb1d8368e43
  spec:
    host: redhat-developer-hub-helm-my-ns.apps.rosa.pdgba-acqm3-3em.42wz.p3.openshiftapps.com
    path: /
    port:
      targetPort: http-backend
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: edge
    to:
      kind: Service
      name: redhat-developer-hub-helm
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2025-10-23T11:11:18Z"
        status: "True"
        type: Admitted
      host: redhat-developer-hub-helm-my-ns.apps.rosa.pdgba-acqm3-3em.42wz.p3.openshiftapps.com
      routerCanonicalHostname: router-default.apps.rosa.pdgba-acqm3-3em.42wz.p3.openshiftapps.com
      routerName: default
      wildcardPolicy: None
kind: RouteList
metadata:
  resourceVersion: "42038"
